--- a/index.html
+++ b/index.html
@@ -8,8 +8,45 @@
     <META NAME="Title" CONTENT="掌握Excel VBA，工作效率秒提升">
     <META NAME="Description" CONTENT="擁有VBA技能薪資也跟著升級！老師將一步步帶領大家學會錄製巨集、簡易VBA撰寫及函數、語法的用運，初學者也可以輕鬆學習，立刻解決工作上遇到的問題。">
     <META NAME="keywords" CONTENT ="IT360,Excel VBA,巨集,VBA語法,函數 ">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <nav></nav>
+    <header>
+        <h1>Excel VBA初階概念、進階實務</h1>
+        <img class="curve" src="source/hesder曲線test2.svg" alt="">
+    </header>
+    <section class="info">
+        <h2>初階課程</h2>
+        <div>
+            <h3>Excel VBA初階概念：入門超easy，工作效率翻倍提升</h3>
+            <p>課程時數：4小時53分</p>
+            <p>先備能力：Excel基本操作能力</p>
+        </div>
+        <h2>進階課程</h2>
+        <div>
+            <h3>Excel VBA進階實務：80組常用函數語法一次通通掌握</h3>
+            <p>課程時數：5小時46分</p>
+            <p>先備能力：上過Excel VBA初階概念者</p>
+        </div>
+        <img class="curve" src="source/info曲線top.svg" alt="">
+    </section>
+    <section class="content1">
+        <h2>重點</h2>
+        <img class="curve" src="source/content曲線top.svg" alt="">
+    </section>
+    <section class="content2">老師介紹及課程內容</section>
+    <section class="content3">
+        <h2>本課程適合學習對象</h2>
+        <img class="curve" src="source/content3曲線.svg" alt="">
+    </section>
+    <form action="">
+        馬上索取課程資訊
+    </form>
+    <footer>
+        <p>客服專線 0800-231-381</p>
+        <p>週一至週五 09:00~12:00、13:00~18:00</p>
+        <p>巨匠電腦版權所有｜ 2019 Gjun information Co., Ltd. All Rights Reserved</p>
+    </footer>
 </body>
 </html>
