--- a/index.html
+++ b/index.html
@@ -35,35 +35,34 @@
 	</nav>
 	<header>
 		<img src="images/banner_title.png" alt="掌握Excel VBA，工作效率秒提升">
-		<h1>Excel VBA初階概念、進階實務</h1>
 	</header>
 	<section class="info">
+		<h1>Excel VBA初階概念、進階實務</h1>
 		<div class="container">
 			<div>
 				<h3 class="title_yellow">初階課程</h3>
-				<p class="text_b30">Excel VBA初階概念：入門超easy，工作效率翻倍提升</p>
+				<p class="point">Excel VBA初階概念：入門超easy，工作效率翻倍提升</p>
 				<p>課程時數：4小時53分</p>
 				<p>先備能力：Excel基本操作能力</p>
 			</div>
-			<img src="images/info_arrow.svg" alt="">
+			<img src="images/arrow_info.svg" alt="">
 			<div>
 				<h3 class="title_yellow">進階課程</h3>
-				<p class="text_b30">Excel VBA進階實務：80組常用函數語法一次通通掌握</p>
+				<p class="point">Excel VBA進階實務：80組常用函數語法一次通通掌握</p>
 				<p>課程時數：5小時46分</p>
 				<p>先備能力：上過Excel VBA初階概念者</p>
 			</div>
 		</div>
 	</section>
 	<section class="content1">
-		<!--考慮是否要加標題-->
 		<div class="container">
-			<h3>使用Excel，你是否也有這樣的困擾？</h3>
+			<h3 class="title">使用Excel，你是否也有這樣的困擾？</h3>
 			<div>
 				<p class="del">海量資料土法煉鋼</p>
 				<img src="images/arrow.svg" alt="">
 				<img src="images/icon1.svg" alt="">
 				<div class="circle">
-					<p class="text_b30">一鍵巨集就做好</p>
+					<p class="point">一鍵巨集就做好</p>
 					<p>快速處理大量資料，減少重複性操作，避免人工失誤。</p>
 				</div>
 			</div>
@@ -73,7 +72,7 @@
 				<img src="images/arrow.svg" alt="">
 				<img src="images/icon2.svg" alt="">
 				<div class="circle">
-					<p class="text_b30">實例操作馬上會</p>
+					<p class="point">實例操作馬上會</p>
 					<p>以最簡單常用的案例解說，初學者也能成為VBA達人。</p>
 				</div>
 			</div>
@@ -83,7 +82,7 @@
 				<img src="images/arrow.svg" alt="">
 				<img src="images/icon3.svg" alt="">
 				<div class="circle">
-					<p class="text_b30">語法字典看這裡</p>
+					<p class="point">語法字典看這裡</p>
 					<p>80組必學語法全收錄，工作馬上可以用，還可自行修改。</p>
 				</div>
 			</div>
@@ -91,7 +90,7 @@
 	</section>
 	<section class="content2">
 		<div class="container">
-			<div><img src="images/teacher_s.jpg" alt="蘇世榮老師"></div>
+			<img src="images/teacher_s.jpg" alt="蘇世榮老師">
 			<h3>蘇世榮老師</h3>
 			<ul>
 				<li>25年電腦教學資歷</li>
@@ -105,7 +104,7 @@
 
 
 		<div class="container">
-			<h3>活用Excel VBA，提升效率又加薪！</h3>
+			<h3 class="title">活用Excel VBA，提升效率又加薪！</h3>
 			
 			<h4>簡單案例教學，80組語法一次掌握</h4>
 			<p>根據人力銀行顯示，擁有VBA技能薪資也跟著升級！在這兩門初階、進階課程中，老師將一步步帶領大家學會錄製巨集、簡易VBA撰寫及函數、語法的用運，不會Excel函數、不會寫程式也可以輕鬆學習。並運用實際案例來操作說明，能立刻解決工作上遇到的問題。</p>
