--- a/index.html
+++ b/index.html
@@ -10,19 +10,10 @@
 	<META NAME="Description" CONTENT="擁有VBA技能薪資也跟著升級！老師將一步步帶領大家學會錄製巨集、簡易VBA撰寫及函數、語法的用運，初學者也可以輕鬆學習，立刻解決工作上遇到的問題。">
 	<META NAME="keywords" CONTENT="IT360,Excel VBA,巨集,VBA語法,函數 ">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/rwd.css">
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/TWzipcode/jquery.twzipcode.min.js"></script>
-	<style>
-		#twzipcode input {display: none;}
-		/*.county {
-		    background-color: #4169E1;
-		    color: #fff;
-		}
-		.district {
-		    background-color: #008000;
-		    color: #fff;
-		}*/
-	</style>
+
 	<script>
 		$(document).ready(function(){
 		$('#twzipcode').twzipcode({'css': ['area', 'area']});
