remove curve, try header_triangle

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<META NAME="Description" CONTENT="擁有VBA技能薪資也跟著升級！老師將一步步帶領大家學會錄製巨集、簡易VBA撰寫及函數、語法的用運，初學者也可以輕鬆學習，立刻解決工作上遇到的問題。">
 	<META NAME="keywords" CONTENT="IT360,Excel VBA,巨集,VBA語法,函數 ">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/rwd.css">
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/TWzipcode/jquery.twzipcode.min.js"></script>
 
@@ -64,7 +63,8 @@
 					<p class="point">一鍵巨集就做好</p>
 					<p>快速處理大量資料，減少重複性操作，避免人工失誤。</p>
 				</div>
-			</div><div>
+			</div>
+			<div>
 				<p class="del">VBA語法好難懂</p>
 				<img src="images/arrow.svg" alt="">
 				<img src="images/icon2.svg" alt="">
@@ -72,7 +72,8 @@
 					<p class="point">實例操作馬上會</p>
 					<p>以最簡單常用的案例解說，初學者也能成為VBA達人。</p>
 				</div>
-			</div><div>
+			</div>
+			<div>
 				<p class="del">找語法超花時間</p>
 				<img src="images/arrow.svg" alt="">
 				<img src="images/icon3.svg" alt="">
