delete class info

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="content1 info wow fadeInRightBig" data-wow-delay="0.5s">
+	<section class="content1 wow fadeInRightBig" data-wow-delay="0.5s">
 		<div class="container">
 			<h3 class="title">使用Excel，你是否也有這樣的困擾？</h3>
 			<div>
