修改排版、class改名，banner OK

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 	<META NAME="Description" CONTENT="擁有VBA技能薪資也跟著升級！老師將一步步帶領大家學會錄製巨集、簡易VBA撰寫及函數、語法的用運，初學者也可以輕鬆學習，立刻解決工作上遇到的問題。">
 	<META NAME="keywords" CONTENT="IT360,Excel VBA,巨集,VBA語法,函數 ">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/rwd.css">
-	<link rel="stylesheet" href="css/animate.css">
+	<!-- <link rel="stylesheet" href="css/animate.css"> -->
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/TWzipcode/jquery.twzipcode.min.js"></script>
 
@@ -41,7 +40,10 @@
 		</ul>
 	</nav>
 	<header>
-		<img src="images/banner_title.png" alt="掌握Excel VBA，工作效率秒提升" class="wow zoomIn wHighlight">
+			<div>
+			<p>工作效率ＵＰ！提早下班就靠它！</p>
+			<img src="images/banner_title.png" alt="掌握Excel VBA，工作效率秒提升" class="wow zoomIn wHighlight">
+		</div>
 	</header>
 	<section class="info wow fadeInLeftBig">
 		<h1>Excel VBA 初階概念、進階實務</h1>
@@ -61,7 +63,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="content1 wow fadeInRightBig" data-wow-delay="0.5s">
+	<section class="advantage wow fadeInRightBig" data-wow-delay="0.5s">
 		<div class="container">
 			<h3 class="title">使用Excel，你是否也有這樣的困擾？</h3>
 			<div>
@@ -93,7 +95,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="content2">
+	<section class="teacher">
 		<div class="container wow zoomInRight">
 			<img src="images/teacher_s.jpg" alt="蘇世榮老師">
 			<h3>蘇世榮老師</h3>
@@ -106,55 +108,60 @@
 			</ul>
 			<p>蘇世榮老師的專業強項在於辦公室文件（office軟體）的資訊化與快速整合運用，以及ODF導入和轉檔，教學時相當擅長以實際案例將複雜內容清楚表達，並在各個政府機關和大專院校擔任過專任講師，長年致力於教學，經驗相當豐富，教齡長達25年，更有眾多精采的著作。</p>
 		</div>
+	</section>
 
 
+	<section class="classIntro">
 		<div class="container">
 			<h3 class="title">活用Excel VBA，提升效率又加薪！</h3>
 			
 			<h4>簡單案例教學，80組語法一次掌握</h4>
 			<p>根據人力銀行顯示，擁有VBA技能薪資也跟著升級！在這兩門初階、進階課程中，老師將一步步帶領大家學會錄製巨集、簡易VBA撰寫及函數、語法的用運，不會Excel函數、不會寫程式也可以輕鬆學習。並運用實際案例來操作說明，能立刻解決工作上遇到的問題。</p>
-			
-			<div class="wow bounceInDown">
-				<h4>錄製巨集的技巧</h4>
-				<img src="images/VBA1.jpg" alt="">
-				<ul>
-					<li>相對位置和絕對位置的差別</li>
-					<li>去除空白列、數字轉換日期</li>
-					<li>建立進銷存系統</li>
-					<li>建立自動記錄的巨集</li>
-				</ul>
-			</div><div class="wow bounceInDown">
-				<h4>VBA初體驗</h4>
-				<img src="images/VBA2.jpg" alt="">
-				<ul>
-					<li>儲存格、欄列、工作表指定方式</li>
-					<li>單條件、多條件判斷與法</li>
-					<li>資料型態和變數運用</li>
-					<li>迴圈語法、物件迴圈</li>
-				</ul>
-			</div><div class="wow bounceInUp">
-				<h4>常用語法</h4>
-				<img src="images/VBA3.jpg" alt="">
-				<ul>
-					<li>活頁簿常用語法</li>
-					<li>工作表常用語法</li>
-					<li>儲存格常用語法</li>
-					<li>其他常用語法</li>
-				</ul>
-			</div><div class="wow bounceInUp">
-				<h4>VBA中使用Excel函數</h4>
-				<img src="images/VBA4.jpg" alt="">
-				<ul>
-					<li>加入Excel函數</li>
-					<li>自訂函數：串接、判斷等級</li>
-					<li>增益級的建立</li>
-					<li>IF、Select Case、Switch、迴圈</li>
-				</ul>
-			</div>
 		</div>
 	</section>
 
-	<section class="content3">
+	<section class="classPoints"><div class="container">
+		<div class="wow bounceInDown">
+			<h4>錄製巨集的技巧</h4>
+			<img src="images/VBA1.jpg" alt="">
+			<ul>
+			<li>相對位置和絕對位置的差別</li>
+			<li>去除空白列、數字轉換日期</li>
+			<li>建立進銷存系統</li>
+			<li>建立自動記錄的巨集</li>
+			</ul>
+		</div><div class="wow bounceInDown">
+			<h4>VBA初體驗</h4>
+			<img src="images/VBA2.jpg" alt="">
+			<ul>
+			<li>儲存格、欄列、工作表指定方式</li>
+			<li>單條件、多條件判斷與法</li>
+			<li>資料型態和變數運用</li>
+			<li>迴圈語法、物件迴圈</li>
+			</ul>
+		</div><div class="wow bounceInUp">
+			<h4>常用語法</h4>
+			<img src="images/VBA3.jpg" alt="">
+			<ul>
+			<li>活頁簿常用語法</li>
+			<li>工作表常用語法</li>
+			<li>儲存格常用語法</li>
+			<li>其他常用語法</li>
+			</ul>
+		</div><div class="wow bounceInUp">
+			<h4>VBA中使用Excel函數</h4>
+			<img src="images/VBA4.jpg" alt="">
+			<ul>
+			<li>加入Excel函數</li>
+			<li>自訂函數：串接、判斷等級</li>
+			<li>增益級的建立</li>
+			<li>IF、Select Case、Switch、迴圈</li>
+			</ul>
+		</div>
+		</div>
+	</section>
+
+	<section class="students">
 		<div class="container wow fadeInRightBig">
 			<img src="images/computer.png" alt="">
 			<h3 class="title_yellow">本課程適合學習對象</h3>
@@ -171,16 +178,19 @@
 
 	<section class="contact">
 		<h3 class="wow pulse" style="animation-iteration-count: infinite;">馬上索取課程資訊</h3>
+		<div class="container">
+			<img src="images/card.png" alt="">
 		<form name="contactForm" method="post" action="">
-			<input type="text" name="contactName" placeholder="姓名" required="required">
-			<input type="text" name="contactMobile" placeholder="行動電話" required="required">
-			<div id="twzipcode"></div>
-			<input type="text" id="contactEmail" name="contactEmail" placeholder="E-MAIL">
-			<input type="checkbox" id="contactIAgree" name="contactIAgree" value="1" required="required"><label for="contactIAgree">我已詳細閱讀並接受</label><a
-			onclick="window.open('http://www.pcschool.com.tw/member/Message.html','person',config='height=640,width=830');return false;"
-			href="#">個資保護聲明</a>
-			    <input type="submit" id="submitBtn" value="送出">
+		<input type="text" name="contactName" placeholder="姓名" required="required">
+		<input type="text" name="contactMobile" placeholder="行動電話" required="required">
+		<div id="twzipcode"></div>
+		<input type="text" id="contactEmail" name="contactEmail" placeholder="E-MAIL">
+		<input type="checkbox" id="contactIAgree" name="contactIAgree" value="1" required="required"><label for="contactIAgree">我已詳細閱讀並接受</label><a
+		onclick="window.open('http://www.pcschool.com.tw/member/Message.html','person',config='height=640,width=830');return false;"
+		href="#">個資保護聲明</a>
+		<input type="submit" id="submitBtn" value="送出">
 		</form>
+	</div>
 	</section>
 	<footer>
 		<p>客服專線 0800-231-381</p>
