添加網頁預覽縮圖(修正連結)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:title" content="掌握Excel VBA，工作效率秒提升" />
-	<meta property="og:image" content="/web_excelVBA/images/og_1200x630.jpg" />
+	<meta property="og:image" content="https://joyuhuang.github.io/web_excelVBA/images/og_1200x630.jpg" />
 	<meta property="og:description" content="擁有VBA技能薪資也跟著升級！老師將一步步帶領大家學會錄製巨集、簡易VBA撰寫及函數、語法的用運，初學者也可以輕鬆學習，立刻解決工作上遇到的問題。" />
 	<title>掌握Excel VBA，工作效率秒提升</title>
 	<META NAME="Title" CONTENT="掌握Excel VBA，工作效率秒提升">
