--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 		</div>
 	</header>
 	<section class="info">
-		<h1 class="wow fadeInLeftBig">Excel VBA 初階概念、進階實務</h1>
 		<div class="container wow fadeInLeftBig">
+			<h1>Excel VBA 初階概念、進階實務</h1>
 			<div>
 				<h3 class="title_yellow">初階課程</h3>
 				<p class="point">Excel VBA初階概念：入門超easy，工作效率翻倍提升</p>
