--- a/index.html
+++ b/index.html
@@ -50,14 +50,15 @@
 		</ul>
 	</nav>
 	<header>
-			<div>
-			<p class="wow bounceIn" data-wow-delay="0.5s">工作效率ＵＰ！提早下班就靠它！</p>
-			<img src="images/banner_title.png" alt="掌握Excel VBA，工作效率秒提升" class="wow zoomIn">
+		<div>
+				<a href="#contact" title="馬上索取課程資訊">馬上<br>開課</a>
+				<p class="wow bounceIn" data-wow-delay="0.5s">工作效率ＵＰ！提早下班就靠它！</p>
+				<img src="images/banner_title.png" alt="掌握Excel VBA，工作效率秒提升" class="wow zoomIn">
 		</div>
 	</header>
 	<section class="info">
 		<div class="container wow fadeInLeftBig">
-			<h1>Excel VBA 初階概念、進階實務</h1>
+			<h1>Excel VBA 初階概念 X 進階實務</h1>
 			<div>
 				<h3 class="title_yellow">初階課程</h3>
 				<p class="point">Excel VBA初階概念：入門超easy，工作效率翻倍提升</p>
@@ -75,7 +76,7 @@
 	</section>
 	<section class="advantage">
 		<div class="container wow fadeInRightBig" data-wow-delay="0.5s">
-			<h3 class="title">使用Excel，你是否也有這樣的困擾？</h3>
+			<h3 class="title">資料處理快狠準，提早下班的秘訣！</h3>
 			<div>
 				<p class="del">海量資料土法煉鋼</p>
 				<img src="images/arrow.svg" alt="">
@@ -186,23 +187,36 @@
 					<p>社會新鮮人、想增加工作效率的上班族</p></li>
 			</ul>
 		</div>
+		<div class="container wow fadeInRightBig">
+			<img src="images/students_img2.jpg" alt="">
+			<h3 class="title_yellow">學完本課程，你可以…</h3>
+			<ul>
+					<li>看懂及修改巨集語法</li>
+					<li>撰寫簡單VBA語法</li>
+					<li>自訂函數</li>
+					<li>提升效能，提早下班</li>
+			</ul>
+		</div>
 	</section>
 
-	<section class="contact">
+	<section id="contact">
 		<h3 class="wow pulse" style="animation-iteration-count: infinite;">馬上索取課程資訊</h3>
 		<div class="container">
-			<img src="images/card.png" alt="">
-		<form name="contactForm" method="post" action="">
-		<input type="text" name="contactName" placeholder="姓名" required="required">
-		<input type="text" name="contactMobile" placeholder="行動電話" required="required">
-		<div id="twzipcode"></div>
-		<input type="text" id="contactEmail" name="contactEmail" placeholder="E-MAIL">
-		<input type="checkbox" id="contactIAgree" name="contactIAgree" value="1" required="required"><label for="contactIAgree">我已詳細閱讀並接受</label><a
-		onclick="window.open('http://www.pcschool.com.tw/member/Message.html','person',config='height=640,width=830');return false;"
-		href="#">個資保護聲明</a>
-		<input type="submit" id="submitBtn" value="送出">
-		</form>
-	</div>
+			<div class="img">
+				<img src="images/card.png" title="免費領取Excel數位學習秘笈" alt="免費領取Excel數位學習秘笈">
+				<p>免費領取Excel數位學習秘笈</p>
+			</div>
+			<form name="contactForm" method="post" action="">
+				<input type="text" name="contactName" placeholder="姓名" required="required">
+				<input type="text" name="contactMobile" placeholder="行動電話" required="required">
+				<div id="twzipcode"></div>
+				<input type="text" id="contactEmail" name="contactEmail" placeholder="E-MAIL">
+				<input type="checkbox" id="contactIAgree" name="contactIAgree" value="1" required="required"><label for="contactIAgree">我已詳細閱讀並接受</label><a
+				onclick="window.open('http://www.pcschool.com.tw/member/Message.html','person',config='height=640,width=830');return false;"
+				href="#">個資保護聲明</a>
+				<input type="submit" id="submitBtn" value="馬上索取">
+			</form>
+		</div>
 	</section>
 	<footer>
 		<p>客服專線 0800-231-381</p>
