--- a/index.html
+++ b/index.html
@@ -16,28 +16,60 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/TWzipcode/jquery.twzipcode.min.js"></script>
-
+	<script src="js/wow.min.js"></script>
 	<script>
-		$(function() {
-			
-		});
 		$(document).ready(function(){
-		$('#twzipcode').twzipcode({'css': ['area', 'area']});
+			// ===為縣市區的下拉式選單做樣式==============================
+			$('#twzipcode').twzipcode({'css': ['area', 'area']});
+			// ===建立WOW物件控制動畫=====================================
+			var wow = new WOW({
+				boxClass: 'wow',
+				animateClass: 'animated',
+				offset: 0,
+				mobile: true,
+				live: true
+			});
+			new WOW().init();
+			// ==="馬上開課"標示顯示設定==================================
+			// var headerHeight = $('header').outerHeight();    //偵測header的高度
+			var headerHeight = 150;
+			function checkNav(){		//假如整份文件捲出的距離>=headerHeight, 讓"馬上開課"標示出現<-由CSS的class來做
+				if( $(document).scrollTop() > headerHeight ){
+					// console.log($(document).scrollTop());
+					// console.log(headerHeight);
+					$('nav>a').addClass('fixed');
+				}else{
+					$('nav>a').removeClass('fixed');
+				}
+				// 捲動到索取資訊區域時，隱藏此標示
+				var targetTop = $('#contact').position().top - $(window).height() / 2;
+				// console.log(targetTop);
+				if ($(document).scrollTop() > targetTop ){
+					$('nav>a').removeClass('fixed');
+				}
+			}
+			checkNav();
+			//視窗捲動就執行checkNav()
+			$(window).scroll(function(){
+				checkNav();
+			});
+
+			//點連結時會整頁滑動
+			$('nav>a').click(function(){
+    		$('html,body').animate({scrollTop:$('#contact').position().top},500);
+				});
+			// ==="馬上開課"標示設定 END ==================================
+			// ===課程優點的滑鼠滑入後顯示陰影效果==========================
+			$('.advantage>.container>div').hover(function(){
+					$(this).find('.circle').addClass("hover_shadow");
+				},function(){
+					$(this).find('.circle').removeClass("hover_shadow");
+			});
 		});
+
 	</script>
 </head>
 <body>
-	<script src="js/wow.min.js"></script>
-	<script>
-		var wow = new WOW({
-    		boxClass: 'wow',
-			animateClass: 'animated',
-			offset: 0,
-			mobile: true,
-			live: true
-		});
-		new WOW().init();
-	</script>
 	<nav>
 		<img id="logo" src="images/logo_it360.png" alt="巨匠電腦">
 		<ul class="topbar">
@@ -48,10 +80,10 @@
 			<li><a href="javascript:;" title="支援服務">支援服務</a></li>
 			<li><a href="javascript:;" title="學員專區">學員專區</a></li>
 		</ul>
+		<a href="#contact" title="馬上索取課程資訊">馬上<br>開課</a>
 	</nav>
 	<header>
 		<div>
-				<a href="#contact" title="馬上索取課程資訊">馬上<br>開課</a>
 				<p class="wow bounceIn" data-wow-delay="0.5s">工作效率ＵＰ！提早下班就靠它！</p>
 				<img src="images/banner_title.png" alt="掌握Excel VBA，工作效率秒提升" class="wow zoomIn">
 		</div>
@@ -188,7 +220,7 @@
 			</ul>
 		</div>
 		<div class="container wow fadeInRightBig">
-			<img src="images/students_img2.jpg" alt="">
+			<img src="images/students_img2.png" alt="">
 			<h3 class="title_yellow">學完本課程，你可以…</h3>
 			<ul>
 					<li>看懂及修改巨集語法</li>
@@ -202,10 +234,7 @@
 	<section id="contact">
 		<h3 class="wow pulse" style="animation-iteration-count: infinite;">馬上索取課程資訊</h3>
 		<div class="container">
-			<div class="img">
-				<img src="images/card.png" title="免費領取Excel數位學習秘笈" alt="免費領取Excel數位學習秘笈">
-				<p>免費領取Excel數位學習秘笈</p>
-			</div>
+			<img src="images/card.png" title="免費領取Excel數位學習秘笈" alt="免費領取Excel數位學習秘笈">
 			<form name="contactForm" method="post" action="">
 				<input type="text" name="contactName" placeholder="姓名" required="required">
 				<input type="text" name="contactMobile" placeholder="行動電話" required="required">
