classPoints動畫改成在手機上有排隊入列的感覺

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
 	<section class="classPoints">
 		<div class="container wow zoomInRight">
-			<div class="wow bounceInDown">
+			<div class="wow bounceInUp">
 				<h4>錄製巨集的技巧</h4>
 				<img src="images/VBA1.jpg" alt="">
 				<ul>
@@ -175,7 +175,7 @@
 				<li>建立進銷存系統</li>
 				<li>建立自動記錄的巨集</li>
 				</ul>
-			</div><div class="wow bounceInDown">
+			</div><div class="wow bounceInUp">
 				<h4>VBA初體驗</h4>
 				<img src="images/VBA2.jpg" alt="">
 				<ul>
