--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		</div>
 	</section>
 	<section class="advantage">
-		<div class="container wow fadeInRightBig" data-wow-delay="0.5s">
+		<div class="container wow fadeInRightBig">
 			<h3 class="title">資料處理快狠準，提早下班的秘訣！</h3>
 			<div>
 				<p class="fault del">海量資料土法煉鋼</p>
