修改成網站練習作品

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:title" content="掌握Excel VBA，工作效率秒提升" />
-	<meta property="og:image" content="https://joyuhuang.github.io/web_excelVBA/images/og_1200x630.jpg" />
-	<meta property="og:description" content="擁有VBA技能薪資也跟著升級！老師將一步步帶領大家學會錄製巨集、簡易VBA撰寫及函數、語法的用運，初學者也可以輕鬆學習，立刻解決工作上遇到的問題。" />
+	<meta property="og:image" content="images/og_1200x630.jpg" />
+	<meta property="og:description" content="(此為網頁練習作品) 擁有VBA技能薪資也跟著升級！老師將一步步帶領大家學會錄製巨集、簡易VBA撰寫及函數、語法的用運，初學者也可以輕鬆學習，立刻解決工作上遇到的問題。" />
 	<title>掌握Excel VBA，工作效率秒提升</title>
 	<META NAME="Title" CONTENT="掌握Excel VBA，工作效率秒提升">
-	<META NAME="Description" CONTENT="擁有VBA技能薪資也跟著升級！老師將一步步帶領大家學會錄製巨集、簡易VBA撰寫及函數、語法的用運，初學者也可以輕鬆學習，立刻解決工作上遇到的問題。">
-	<META NAME="keywords" CONTENT="IT360,Excel VBA,巨集,VBA語法,函數 ">
+	<META NAME="Description" CONTENT="(此為網頁練習作品) 擁有VBA技能薪資也跟著升級！老師將一步步帶領大家學會錄製巨集、簡易VBA撰寫及函數、語法的用運，初學者也可以輕鬆學習，立刻解決工作上遇到的問題。">
+	<META NAME="keywords" CONTENT="網頁設計,課程網頁設計">
 		<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/jquery-3.2.1.min.js"></script>
@@ -21,12 +21,15 @@
 </head>
 <body>
 	<nav>
-		<img id="logo" src="images/logo_it360.png" alt="巨匠電腦">
-		<ul class="topbar">
-			<li><a href="javascript:;" title="開課查詢">開課查詢</a></li>
+		<img id="logo" src="./images/logo.jpg" alt="">
+		<div class="navbar-toggle"  id="bar">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</div>
+		<ul class="topbar" id="menu">
 			<li><a href="javascript:;" title="課程總覽">課程總覽</a></li>
 			<li><a href="javascript:;" title="名師專區">名師專區</a></li>
-			<li><a href="javascript:;" title="合作開課">合作開課</a></li>
 			<li><a href="javascript:;" title="支援服務">支援服務</a></li>
 			<li><a href="javascript:;" title="學員專區">學員專區</a></li>
 		</ul>
@@ -39,7 +42,7 @@
 		</div>
 		<div class="teacherName">
 			<p>Office達人</p>
-			<p>蘇世榮老師</p>
+			<p>張家豪老師</p>
 		</div>
 	</header>
 	<section class="info">
@@ -95,16 +98,16 @@
 	
 	<section class="teacher">
 		<div class="container wow zoomInRight">
-			<img src="images/teacher_s.jpg" alt="蘇世榮老師">
-			<h3>蘇世榮老師</h3>
+			<img src="images/teacher_s.jpg" alt="張家豪老師">
+			<h3>張家豪老師</h3>
 			<ul>
 				<li>25年電腦教學資歷</li>
-				<li>巨匠電腦、政府機關、大專院校專任講師</li>
+				<li>政府機關、大專院校專任講師</li>
 				<li>擅長將複雜內容，用實例解析容易理解</li>
 				<li>辦公室文件資訊化與快速整合運用</li>
 				<li>ODF導入和解決轉檔問題</li>
 			</ul>
-			<p>蘇世榮老師的專業強項在於辦公室文件（office軟體）的資訊化與快速整合運用，以及ODF導入和轉檔，教學時相當擅長以實際案例將複雜內容清楚表達，並在各個政府機關和大專院校擔任過專任講師，長年致力於教學，經驗相當豐富，教齡長達25年，更有眾多精采的著作。</p>
+			<p>張家豪老師的專業強項在於辦公室文件（office軟體）的資訊化與快速整合運用，以及ODF導入和轉檔，教學時相當擅長以實際案例將複雜內容清楚表達，並在各個政府機關和大專院校擔任過專任講師，長年致力於教學，經驗相當豐富，教齡長達25年，更有眾多精采的著作。</p>
 		</div>
 	</section>
 
@@ -195,16 +198,17 @@
 				<div id="twzipcode"></div>
 				<input type="text" id="contactEmail" name="contactEmail" placeholder="E-MAIL">
 				<input type="checkbox" id="contactIAgree" name="contactIAgree" value="1" required="required"><label for="contactIAgree">我已詳細閱讀並接受</label><a
-				onclick="window.open('http://www.pcschool.com.tw/member/Message.html','person',config='height=640,width=830');return false;"
+				onclick=""
 				href="#">個資保護聲明</a>
 				<input type="submit" id="submitBtn" value="馬上索取">
 			</form>
 		</div>
 	</section>
 	<footer>
-		<p>客服專線 0800-231-381</p>
+		<p>客服專線 0800-123-321</p>
 		<p>週一至週五 09:00~12:00、13:00~18:00</p>
-		<p>巨匠電腦版權所有｜ 2019 Gjun information Co., Ltd. All Rights Reserved</p>
+		<p>Copyright © 2019 All Rights Reserved</p>
+		<p><br>(網站設計習作,相關影像及文字資訊來自網路,如有侵權請告知，將會即刻處理)</p>
 	</footer>
 </body>
 
